--- a/user.yml
+++ b/user.yml
@@ -15,3 +15,19 @@ spring:
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
+  boot:
+    admin:
+      client:
+        url: http://localhost:9020
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:9005/eureka
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+feign:
+  hystrix:
+    enabled: true
