--- a/register.yml
+++ b/register.yml
@@ -6,5 +6,5 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
-    serviceUrl:
+    serviceUrl: http://localhost:8761/eureka/
       defaultZone: http://${eureka.instance.hostname}:${server.port}
